maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: method newArray of type Array[Nothing] does not take type parameters.
	var resu = new Array(8)[Int]
                               ^JediEscaper:34: error: method chercheEcrit has return statement; needs result type
	return resu
        ^JediEscaper:36: error: class Array takes type parameters
def recursif(pos:Array) = {
                 ^