maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
	val x:Int = getX()
	val y:Int = getY()
	val haut:Int = getMondeHauteur()
	val large:Int = getMondeLargeur()
	var a:Int = 0
	var b:Int = 0
	var inter = 0  
	for ( h <- 0 to haut - 2 ) {
		for (l <- 0 to large - 2 ) {
			if (aBiscuit(h,l)) {
				 a=h
				 b=l
			}
		}
	}
def chercheEcrit(f:Int,g:Int) = {
	inter = getIndication(f,g)
	inter = inter + 1
	var resu = new Array(8)[Int]
	if ((!aMurNord(f,g)) && (getIndication(f,g-1) == 9999)) {
		setIndication(f,g-1,inter)
	}
	if ((!aMurOuest(f,g)) && (getIndication(f-1,g) == 9999)) {
		setIndication(f-1,g,inter)
	}
	if ((!aMurNord(f,g+1)) && (getIndication(f,g+1) == 9999)) {
		setIndication(f,g + 1,inter)
	}
	if ((!aMurOuest(f+1,g)) && (getIndication(f+1,g) == 9999)) {
		setIndication(f-1,g,inter)
	}
	return resu
}
def recursif(pos:Array) = {
	val p = pos.length-1
}

while ( (a != x) && (b != y) ) {
	
}



}
